fix: make text align of biblios to justify

--- a/source/css/biblio.styl
+++ b/source/css/biblio.styl
@@ -4,5 +4,6 @@
     padding-right: 10px
 
   .csl-right-inline
+    text-align: justify
     margin-bottom: 16px
     margin-left: 48px
